--- a/public/bicycle.css
+++ b/public/bicycle.css
@@ -1,5 +1,5 @@
 #windows .window:not(.active) {
-    display: none;
+    visibility: hidden;
 }
 
 #windows .window.active {
@@ -8,11 +8,43 @@
     top: 0;
     width: 100%;
     height: 100%;
-    display: block;
+    visibility: visible;
 }
 
-#map {
+#windows .window.map:not(.mobile) #map {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
     height: 100%;
+}
+
+#windows .window.map:not(.mobile) #bikelist {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    width: 50%;
+    height: 100%;
+}
+
+#windows .window.map:not(.mobile) #bikelist .title {
+    text-align: center;
+    font-size: 30px;
+}
+
+#windows .window.map.mobile #map {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 50%;
+}
+
+#windows .window.map.mobile #bikelist {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
 }
 
 html, body {
